--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: bolder;
   float: right;
+  clear: both;
 }
 
 footer {
@@ -83,4 +84,9 @@ footer li {
 
 #product-container {
   margin: 0 10%;
+  text-align: center;
+}
+
+#searchbox {
+  float: right;
 }
