--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #logo {
-  font-size: 100px;
+  font-size: 120px;
   font-family: 'Pinyon Script', cursive;
   text-align: center;
   padding-bottom: 30px;
@@ -17,6 +17,8 @@
   display: inline;
   padding: 10px 30px;
   background-color: rgb(213, 213, 213);
+  color: rgb(14, 75, 79);
+  font-size: 16px;
 }
 
 #navbar li:hover {
