--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@
   background-color: rgb(203, 203, 203);
 }
 
+#navbar li:active {
+  background-color: rgb(150, 150, 150);
+}
+
 body {
   background: #f4f5f7 !important;
   margin: 0 2% !important;
